# sogno-cane-app

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: README.txt  example_dog_8s.csv  example_human_8s.csv
portable/: AGGIORNAMENTI.txt  COME_AGGIORNARE.txt  LEGGIMI.txt  SELFTEST.bat  SOGNO_CANE_Setup.bat  START.bat  update_apply.py
sogno_cane/: __init__.py  __main__.py  config.py  settings.py  update.py
sogno_cane/core/: __init__.py  engine.py  sources.py
sogno_cane/eeg/: __init__.py  bands.py  profiles.py  simulator.py  unicorn_packet.py
sogno_cane/io/: __init__.py  archive.py  edf.py  loaders.py  recording.py
sogno_cane/midi/: __init__.py  context.py  mapper.py  output.py  pacing.py  presets.py  scales.py
sogno_cane/midi/strategies/: __init__.py  band_to_note.py  clip_launcher.py  coherence_cc.py  markov_generative.py  per_channel_band.py  per_channel_cc.py  threshold_trigger.py
sogno_cane/ui/: __init__.py  archive_panel.py  device_panel.py  main_window.py  mapping_panel.py  midi_monitor.py  spectrum_widget.py  theme.py  waveform_widget.py
tests/: conftest.py  test_bands.py  test_config.py  test_eeg.py  test_engine.py  test_io_archive.py  test_io_edf.py  test_io_loaders.py  test_io_recording.py  test_mapper.py  test_output.py  test_pacing.py  test_regressions.py  test_scales.py  test_settings.py  test_sources.py  test_strategies.py  test_ui_smoke.py  test_update.py
tools/: build_release.py  make_icon.py
