[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sogno_cane"
version = "0.4.0"
description = "EEG -> MIDI bridge and simulator for human + dog (Unicorn Hybrid Black)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SOGNO_CANE" }]
dependencies = [
    "numpy>=1.24",
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
sogno-cane = "sogno_cane.__main__:main"

[tool.setuptools.packages.find]
include = ["sogno_cane*"]

[tool.setuptools.package-data]
sogno_cane = ["assets/*.ico", "assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
